<resources>
    <string name="app_name">EmployerApp</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="welcome">WELCOME</string>
    <string name="message">messege</string>
    <string name="category">category</string>
    <string name="news">news</string>
    <string name="content">Content</string>
    <string name="accountant_department">Accountant Department</string>
    <string name="it_center">IT Center</string>
    <string name="call_center">Call Center</string>
    <string name="Job">Job:</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="department">Department</string>
    <string name="job">job</string>
    <string name="Contract">End Contract Year</string>
    <string name="new_customer">New Customer</string>
    <string name="publish_news">Publish News</string>
    <string name="todo">TODO</string>
    <string-array name="departments">
        <item>IT SUPPORT</item>
        <item>HEALTH CENTER</item>
        <item>CALL CENTER</item>
        <item>EDUCATION</item>
        <item>DRIVERS</item>
        <item>ACCOUNTANT</item>
        <item>INDUSTRY</item>
        <item>NEWS</item>


    </string-array>

    <string-array name="job">
        <item>PROGRAMMER</item>
        <item>CYBER SECURITY</item>
        <item>NURSE</item>
        <item>DOCTOR</item>
        <item>CUSTOMER CARE</item>
        <item>CALLER</item>
        <item>SALE</item>
        <item>ACCOUNTANT</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Congratulation Now You Assign New Customer</string>
</resources>
