
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.robert.customer_manager.ui.login.UserViewModel"/>
    </data>

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     >

     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/login"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:textAppearance="@style/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_8" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_text"
        android:paddingLeft="16dp"
        android:hint="@string/email"
        android:text="@={loginViewModel.email}"
        android:ems="15"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:ems="15"
        android:paddingLeft="16dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_text"
        android:hint="@string/password"
        android:text="@={loginViewModel.password}"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry" />

         <Button
             android:id="@+id/register_model"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
             android:background="@drawable/bg_button"
             android:ems="15"
             android:onClick="@{() -> loginViewModel.login()}"
             android:text="@string/login"
             app:backgroundTint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password"
             app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8" />


         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/register_model"
             android:visibility="invisible"
             style="@style/Widget.AppCompat.ProgressBar"
             android:layout_marginTop="10dp"/>

         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="44dp"
             android:layout_marginLeft="44dp"
             android:text="Don't Have An Account ?"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/register_model"
             app:layout_constraintVertical_bias="0.493" />

         <TextView
             android:id="@+id/register"
             android:textColor="@color/green"
             android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="register"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.127"
             app:layout_constraintStart_toEndOf="@+id/textView7"
             app:layout_constraintTop_toBottomOf="@+id/register_model"
             app:layout_constraintVertical_bias="0.492" />

     </androidx.constraintlayout.widget.ConstraintLayout>

 </ScrollView>
</layout>
